test/fail/optargs/optarg_too_many.lly
#[
SyntaxError: Wrong number of arguments to f (3 for 1..2).
    from optarg_too_many.lly:10
]#

define f(a: integer, b: *integer = 10) {

}

f(1, 2, 3)
